[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainScene.gd" type="Script" id=3]
[ext_resource path="res://CurrentScene.gd" type="Script" id=4]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="CurrentScene" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Menu" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
